将conn_info拆分为client_conn_info和server_connn_info分别用于客户端的网络连接和服务器的网络连接； 添加ClientNetwork的Disconnect回调； 将conn_info的状态处理，从各个list中，改到对应的状态机；

--- a/code/common/Network/Network.vcxproj
+++ b/code/common/Network/Network.vcxproj
@@ -12,13 +12,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client\client_network_select.cpp" />
+    <ClCompile Include="conn_info\client_conn_info.cpp" />
     <ClCompile Include="conn_info\conn_info.cpp" />
+    <ClCompile Include="conn_info\server_conn_info.cpp" />
     <ClCompile Include="Server\server_network_select.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Share\Header\Base\INetwork.h" />
     <ClInclude Include="Client\client_network_select.h" />
+    <ClInclude Include="conn_info\client_conn_info.h" />
     <ClInclude Include="conn_info\conn_info.h" />
+    <ClInclude Include="conn_info\server_conn_info.h" />
     <ClInclude Include="NetworkHead.h" />
     <ClInclude Include="Server\server_network_select.h" />
   </ItemGroup>
