--- a/code/common/CMakeLists.txt
+++ b/code/common/CMakeLists.txt
@@ -4,15 +4,15 @@ set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake")
 
 SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O2 -g -ggdb")
 SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2 -g")
-SET(CMAKE_C_COMPILER g++)
+#SET(CMAKE_C_COMPILER g++)
 
 add_compile_options(-std=c++11)
 
 project (common)
 if (NOT SET_OUTPUT_DIRECTORY)
     set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/target")
-    set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY "../Share/llib")
-    set (CMAKE_LIBRARY_OUTPUT_DIRECTORY "../Share/llib")
+    set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY "../../Share/llib")
+    set (CMAKE_LIBRARY_OUTPUT_DIRECTORY "../../Share/llib")
     set (SET_OUTPUT_DIRECTORY ON)
 endif (NOT SET_OUTPUT_DIRECTORY)
 
