--- a/code/Server/GameServerLogic/CMakeLists.txt
+++ b/code/Server/GameServerLogic/CMakeLists.txt
@@ -2,6 +2,7 @@ SET(LIBGAMESERVERLOGIC_SRC
 GameServerLogic.cpp
 Player/Player.cpp
 Player/PlayerProtocol.cpp
+Player/ClientGSProtocol.pb.cc
 )
 include_directories (
 	"./"
