添加GameServer逻辑层的数据配置模块和对应的数据； 修改GameServer退出时的Crash问题；

--- a/code/Server/GameServerLogic/CMakeLists.txt
+++ b/code/Server/GameServerLogic/CMakeLists.txt
@@ -1,5 +1,6 @@
 SET(LIBGAMESERVERLOGIC_SRC
 GameServerLogic.cpp
+Config/GameServerLogicConfig.cpp
 Player/Player.cpp
 Player/PlayerProtocol.cpp
 Player/ClientGSProtocol.pb.cc
