--- a/code/Server/GameServerLogic/GameServerLogic.vcxproj.filters
+++ b/code/Server/GameServerLogic/GameServerLogic.vcxproj.filters
@@ -12,6 +12,9 @@
     <Filter Include="Player">
       <UniqueIdentifier>{9c01c5bc-8bfb-4507-8893-71ca321e9362}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Config">
+      <UniqueIdentifier>{4bccb2d0-9f05-41f8-a0bf-045c9b60ca3f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameServerLogic.h">
@@ -26,6 +29,9 @@
     <ClInclude Include="Player\ClientGSProtocol.pb.h">
       <Filter>Player</Filter>
     </ClInclude>
+    <ClInclude Include="Config\GameServerLogicConfig.h">
+      <Filter>Config</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameServerLogic.cpp">
@@ -39,6 +45,9 @@
     </ClCompile>
     <ClCompile Include="Player\ClientGSProtocol.pb.cc">
       <Filter>Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Config\GameServerLogicConfig.cpp">
+      <Filter>Config</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
