添加mysql头文件引用； 修改MysqlQuery的代码，变为抽象类；

--- a/code/common/DataBase/DataBase.vcxproj.filters
+++ b/code/common/DataBase/DataBase.vcxproj.filters
@@ -22,5 +22,8 @@
     <ClInclude Include="Mysql\MysqlQuery.h">
       <Filter>Mysql</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Share\Header\Mysql\IMysqlQuery.h">
+      <Filter>Mysql</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
