--- a/code/common/DataBase/DataBase.vcxproj
+++ b/code/common/DataBase/DataBase.vcxproj
@@ -14,6 +14,7 @@
     <ClCompile Include="Mysql\MysqlQuery.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Share\Header\Mysql\IMysqlQuery.h" />
     <ClInclude Include="Mysql\MysqlQuery.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -58,7 +59,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../../Share/Header;../../Share/Header/Base;./;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../Share/Header;../../Share/Header/Base;../../Share/Header/mysql;./;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <MinimalRebuild>false</MinimalRebuild>
     </ClCompile>
@@ -76,7 +77,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../../Share/Header;../../Share/Header/Base;./;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../Share/Header;../../Share/Header/Base;../../Share/Header/mysql;./;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
