添加Client接收服务器发送来的数据处理； 修改网络包的结构和内容；

--- a/code/ClientSimulator/SimulatorLogic/SimulatorLogic.vcxproj
+++ b/code/ClientSimulator/SimulatorLogic/SimulatorLogic.vcxproj
@@ -24,6 +24,13 @@
     <ClCompile Include="ServerConnection\ServerConnection.cpp" />
     <ClCompile Include="SimulatorLogic.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="..\..\Share\Header\ClientGSProtocol.proto">
+      <FileType>Document</FileType>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">protoc -I=../../Share/Header/ --cpp_out=./Player/ ../../Share/Header/ClientGSProtocol.proto</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">ClientGSProtocol.pb.cc;../../share/Header/ClientGSProtocol.pb.h;%(Outputs)</Outputs>
+    </CustomBuild>
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{6E5566B2-F423-421E-9796-2D15402B5206}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
