--- a/code/Server/CenterServer/CenterServer.vcxproj
+++ b/code/Server/CenterServer/CenterServer.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{DAB6AC3E-9C5B-4A11-9E73-544A2D4AA98D}</ProjectGuid>
+    <ProjectGuid>{AED11C19-1ED4-46C0-BD3C-F91EA9948466}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>GameServer</RootNamespace>
+    <RootNamespace>CenterServer</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -27,7 +27,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -54,7 +54,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>./;../../share/header;../../share/header/base;../../share/header/GameServer</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./;../../share/header;../../share/header/base;../../share/header/CenterServer</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <MinimalRebuild>false</MinimalRebuild>
     </ClCompile>
@@ -74,8 +74,8 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>./;../../share/header;../../share/header/base;../../share/header/CenterServer</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <AdditionalIncludeDirectories>./;../../share/header;../../share/header/base;../../share/header/GameServer</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -83,24 +83,24 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>../../share/Lib/Release</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Common.lib;Daemon.lib;FileLog.lib;FileReader.lib;GameServerLogic.lib;Network.lib;RingBuffer.lib;Ws2_32.lib;libprotobuf.lib;libprotoc.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Common.lib;Daemon.lib;FileLog.lib;FileReader.lib;CenterServerLogic.lib;Network.lib;RingBuffer.lib;Ws2_32.lib;libprotobuf.lib;libprotoc.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ClientConnection\ClientConnection.cpp" />
-    <ClCompile Include="Config\GameServerConfig.cpp" />
-    <ClCompile Include="GameServer.cpp" />
-    <ClCompile Include="Main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\Share\Header\GameServer\IGameServer.h" />
-    <ClInclude Include="ClientConnection\ClientConnection.h" />
-    <ClInclude Include="Config\GameServerConfig.h" />
-    <ClInclude Include="GameServer.h" />
+    <ClInclude Include="..\..\Share\Header\CenterServer\IAppConnection.h" />
+    <ClInclude Include="..\..\Share\Header\CenterServer\ICenterServer.h" />
+    <ClInclude Include="..\..\Share\Header\CenterServer\ICenterServerLogic.h" />
+    <ClInclude Include="..\..\Share\Header\CenterServer\IWebConnection.h" />
+    <ClInclude Include="CenterServer.h" />
+    <ClInclude Include="Connection\AppConnection.h" />
+    <ClInclude Include="Connection\WebConnection.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\CMakeLists.txt" />
+    <ClCompile Include="CenterServer.cpp" />
+    <ClCompile Include="Connection\AppConnection.cpp" />
+    <ClCompile Include="Connection\WebConnection.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
