--- a/code/Server/CenterServerLogic/CenterServerLogic.vcxproj.filters
+++ b/code/Server/CenterServerLogic/CenterServerLogic.vcxproj.filters
@@ -1,35 +1,56 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="源文件">
+    <Filter Include="Config">
+      <UniqueIdentifier>{25f58d58-545f-4e60-8aa9-684bbb584244}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="头文件">
+    <Filter Include="Header Files">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="Config">
-      <UniqueIdentifier>{25f58d58-545f-4e60-8aa9-684bbb584244}</UniqueIdentifier>
+    <Filter Include="User">
+      <UniqueIdentifier>{0fc9ba6d-e80d-43a6-9014-5ee3ad7211b9}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CenterServerLogic.cpp">
-      <Filter>源文件</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Config\CenterServerLogicConfig.cpp">
       <Filter>Config</Filter>
     </ClCompile>
+    <ClCompile Include="User\AppUser.cpp">
+      <Filter>User</Filter>
+    </ClCompile>
+    <ClCompile Include="User\WebUser.cpp">
+      <Filter>User</Filter>
+    </ClCompile>
+    <ClCompile Include="User\User.cpp">
+      <Filter>User</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CenterServerLogic.h">
-      <Filter>头文件</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="stdafx.h">
-      <Filter>头文件</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Config\CenterServerLogicConfig.h">
       <Filter>Config</Filter>
+    </ClInclude>
+    <ClInclude Include="User\AppUser.h">
+      <Filter>User</Filter>
+    </ClInclude>
+    <ClInclude Include="User\WebUser.h">
+      <Filter>User</Filter>
+    </ClInclude>
+    <ClInclude Include="User\User.h">
+      <Filter>User</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
