修改CenterServer配置不对，运行不了的Bug； 修改Mysql相关的接口和代码；

--- a/bin/server/server.ini
+++ b/bin/server/server.ini
@@ -16,3 +16,12 @@ WebMaxRecvPackLen=65000
 WebMaxSendPackLen=65000
 WebSleepTime=50
 WebTimeOut=10
+
+DataPort=10100
+DataCount=1000
+DataRecvBuffLen=1024
+DataSendBuffLen=131072
+DataMaxRecvPackLen=65000
+DataMaxSendPackLen=65000
+DataSleepTime=50
+DataTimeOut=10
