--- a/code/Server/CenterServerLogic/CenterServerLogic.vcxproj
+++ b/code/Server/CenterServerLogic/CenterServerLogic.vcxproj
@@ -28,7 +28,9 @@
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\Share\Header\Protocol\App_Server_Protocol.proto" />
+    <CustomBuild Include="..\..\Share\Header\Protocol\App_Server_Protocol.proto">
+      <FileType>Document</FileType>
+    </CustomBuild>
     <None Include="..\..\Share\Header\Protocol\Data_Server_Protocol.proto" />
     <None Include="..\..\Share\Header\Protocol\Web_Server_Protocol.proto" />
   </ItemGroup>
