--- a/code/Server/CenterServerLogic/CenterServerLogic.vcxproj.filters
+++ b/code/Server/CenterServerLogic/CenterServerLogic.vcxproj.filters
@@ -60,14 +60,16 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\Share\Header\Protocol\App_Server_Protocol.proto">
-      <Filter>Client</Filter>
-    </None>
     <None Include="..\..\Share\Header\Protocol\Data_Server_Protocol.proto">
       <Filter>Client</Filter>
     </None>
     <None Include="..\..\Share\Header\Protocol\Web_Server_Protocol.proto">
       <Filter>Client</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="..\..\Share\Header\Protocol\App_Server_Protocol.proto">
+      <Filter>Client</Filter>
+    </CustomBuild>
   </ItemGroup>
 </Project>
