漏传了文件

--- a/code/Server/CenterServerLogic/CenterServerLogic.vcxproj.filters
+++ b/code/Server/CenterServerLogic/CenterServerLogic.vcxproj.filters
@@ -66,10 +66,8 @@
     <None Include="..\..\Share\Header\Protocol\Web_Server_Protocol.proto">
       <Filter>Client</Filter>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <CustomBuild Include="..\..\Share\Header\Protocol\App_Server_Protocol.proto">
+    <None Include="..\..\Share\Header\Protocol\App_Server_Protocol.proto">
       <Filter>Client</Filter>
-    </CustomBuild>
+    </None>
   </ItemGroup>
 </Project>
