--- a/code/Server/CenterServerLogic/CenterServerLogic.vcxproj
+++ b/code/Server/CenterServerLogic/CenterServerLogic.vcxproj
@@ -31,7 +31,7 @@
     <None Include="..\..\Share\Header\Protocol\App_Server_Protocol.proto">
       <FileType>Document</FileType>
     </None>
-    <None Include="..\..\Share\Header\Protocol\Data_Server_Protocol.proto" />
+    <None Include="..\..\Share\Header\Protocol\Sensor_Server_Protocol.proto" />
     <None Include="..\..\Share\Header\Protocol\Web_Server_Protocol.proto" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
