--- a/code/Server/CenterServerLogic/CenterServerLogic.vcxproj
+++ b/code/Server/CenterServerLogic/CenterServerLogic.vcxproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ClCompile Include="CenterServerLogic.cpp" />
     <ClCompile Include="Client\AppClient.cpp" />
+    <ClCompile Include="Client\App_Server_Protocol.pb.cc" />
     <ClCompile Include="Client\Client.cpp" />
     <ClCompile Include="Client\DataClient.cpp" />
     <ClCompile Include="Client\WebClient.cpp" />
@@ -21,6 +22,7 @@
   <ItemGroup>
     <ClInclude Include="CenterServerLogic.h" />
     <ClInclude Include="Client\AppClient.h" />
+    <ClInclude Include="Client\App_Server_Protocol.pb.h" />
     <ClInclude Include="Client\Client.h" />
     <ClInclude Include="Client\DataClient.h" />
     <ClInclude Include="Client\WebClient.h" />
@@ -28,11 +30,19 @@
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\Share\Header\Protocol\App_Server_Protocol.proto">
+    <CustomBuild Include="..\..\Share\Header\Protocol\App_Server_Protocol.proto">
       <FileType>Document</FileType>
-    </None>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">protoc -I=../../Share/Header/Protocol/ --cpp_out=./Client/ ../../Share/Header/Protocol/App_Server_Protocol.proto</Command>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Client/;%(Outputs)</Outputs>
+      <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</LinkObjects>
+    </CustomBuild>
     <None Include="..\..\Share\Header\Protocol\Sensor_Server_Protocol.proto" />
-    <None Include="..\..\Share\Header\Protocol\Web_Server_Protocol.proto" />
+    <CustomBuild Include="..\..\Share\Header\Protocol\Web_Server_Protocol.proto">
+      <FileType>Document</FileType>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">protoc -I=../../Share/Header/Protocol/ --cpp_out=./Client/ ../../Share/Header/Protocol/Web_Server_Protocol.proto</Command>
+      <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</LinkObjects>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Client/;%(Outputs)</Outputs>
+    </CustomBuild>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{0A43511F-7EA3-45A0-BB28-F32FCAD4A10D}</ProjectGuid>
