--- a/code/common/DataBase/DataBase.vcxproj
+++ b/code/common/DataBase/DataBase.vcxproj
@@ -12,10 +12,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Mysql\MysqlQuery.cpp" />
+    <ClCompile Include="Mysql\MysqlResult.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Share\Header\Mysql\IMysqlQuery.h" />
     <ClInclude Include="Mysql\MysqlQuery.h" />
+    <ClInclude Include="Mysql\MysqlResult.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
