完善mysql的连接相关代码，服务器程序在windows下能正常运行

--- a/bin/server/server.ini
+++ b/bin/server/server.ini
@@ -25,3 +25,16 @@ DataMaxRecvPackLen=65000
 DataMaxSendPackLen=65000
 DataSleepTime=50
 DataTimeOut=10
+
+[SensorDB]
+IP=172.16.77.193
+Account=yefei
+Password=82334488
+DBName=SensorDB
+CharacterSet=utf8
+PingTime=30
+SqlBufferLen=131072
+MaxSqlLen=1024
+ResultBufferLen=10485760
+MaxResultLen=1048576
+Frame=20
