--- a/code/Server/CenterServer/CenterServer.vcxproj
+++ b/code/Server/CenterServer/CenterServer.vcxproj
@@ -62,7 +62,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>../../share/Lib/Debug</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Common.lib;Daemon.lib;FileLog.lib;FileReader.lib;CenterServerLogic.lib;Network.lib;RingBuffer.lib;Ws2_32.lib;libprotocd.lib;libprotobufd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Common.lib;Daemon.lib;FileLog.lib;FileReader.lib;CenterServerLogic.lib;Network.lib;RingBuffer.lib;Ws2_32.lib;libprotocd.lib;libprotobufd.lib;libmysql.lib;DataBase.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -83,7 +83,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>../../share/Lib/Release</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Common.lib;Daemon.lib;FileLog.lib;FileReader.lib;CenterServerLogic.lib;Network.lib;RingBuffer.lib;Ws2_32.lib;libprotobuf.lib;libprotoc.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Common.lib;Daemon.lib;FileLog.lib;FileReader.lib;CenterServerLogic.lib;Network.lib;RingBuffer.lib;Ws2_32.lib;libprotobuf.lib;libprotoc.lib;DataBase.lib;mysqlclient.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
