添加commom库中database的编译； 修改CenterServer include路径； 删除SqlDefine.h；

--- a/code/common/CMakeLists.txt
+++ b/code/common/CMakeLists.txt
@@ -22,3 +22,4 @@ add_subdirectory ("FileLog")
 add_subdirectory ("FileReader")
 add_subdirectory ("Network")
 add_subdirectory ("RingBuffer")
+add_subdirectory ("DataBase")
