修改linux下编译不过的问题

--- a/code/common/DataBase/CMakeLists.txt
+++ b/code/common/DataBase/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories (
 	"./"
 	"../../Share/Header"
 	"../../Share/Header/Base"
+	"../../Share/Header/mysql/linux"
 )
 ADD_LIBRARY(database STATIC ${LIBDATABASE_SRC})
 INSTALL(TARGETS database
