添加CenterServerLogic的数据库文件对象模块； 添加linux下mysql访问所需要的头文件；

--- a/code/Server/CenterServerLogic/CMakeLists.txt
+++ b/code/Server/CenterServerLogic/CMakeLists.txt
@@ -7,6 +7,7 @@ Client/Client.cpp
 Client/DataClient.cpp
 Client/Web_Server_Protocol.pb.cc
 Client/WebClient.cpp
+SensorDB/SensorDBConn.cpp
 )
 include_directories (
 	"./"
