--- a/code/Server/CenterServerLogic/CenterServerLogic.vcxproj
+++ b/code/Server/CenterServerLogic/CenterServerLogic.vcxproj
@@ -18,6 +18,7 @@
     <ClCompile Include="Client\DataClient.cpp" />
     <ClCompile Include="Client\WebClient.cpp" />
     <ClCompile Include="Config\CenterServerLogicConfig.cpp" />
+    <ClCompile Include="SensorDB\SensorDBConn.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CenterServerLogic.h" />
@@ -27,6 +28,7 @@
     <ClInclude Include="Client\DataClient.h" />
     <ClInclude Include="Client\WebClient.h" />
     <ClInclude Include="Config\CenterServerLogicConfig.h" />
+    <ClInclude Include="SensorDB\SensorDBConn.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
