添加SensorDB的处理函数和协议头文件；

--- a/code/Server/CenterServerLogic/CenterServerLogic.vcxproj
+++ b/code/Server/CenterServerLogic/CenterServerLogic.vcxproj
@@ -29,6 +29,7 @@
     <ClInclude Include="Client\WebClient.h" />
     <ClInclude Include="Config\CenterServerLogicConfig.h" />
     <ClInclude Include="SensorDB\SensorDBConn.h" />
+    <ClInclude Include="SensorDB\SensorDBOperation.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
