--- a/code/common/DataBase/DataBase.vcxproj.filters
+++ b/code/common/DataBase/DataBase.vcxproj.filters
@@ -25,13 +25,13 @@
     <ClInclude Include="Mysql\MysqlQuery.h">
       <Filter>Mysql</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Share\Header\Mysql\IMysqlQuery.h">
-      <Filter>Mysql</Filter>
-    </ClInclude>
     <ClInclude Include="stdafx.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Mysql\MysqlResult.h">
+      <Filter>Mysql</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Share\Header\Base\IMysqlQuery.h">
       <Filter>Mysql</Filter>
     </ClInclude>
   </ItemGroup>
