修改localtime线程安全问题； 删除不用的commonedefine; 修改Mysql请求和回应的变量； 根据客户端类型，处理对应的数据库回应； Client添加Index和ID，用于处理数据库回应时，快速的找到Client对象；

--- a/code/Server/CenterServerLogic/CenterServerLogic.vcxproj
+++ b/code/Server/CenterServerLogic/CenterServerLogic.vcxproj
@@ -17,6 +17,7 @@
     <ClCompile Include="Client\Client.cpp" />
     <ClCompile Include="Client\DataClient.cpp" />
     <ClCompile Include="Client\WebClient.cpp" />
+    <ClCompile Include="Client\Web_Server_Protocol.pb.cc" />
     <ClCompile Include="Config\CenterServerLogicConfig.cpp" />
     <ClCompile Include="SensorDB\SensorDBConn.cpp" />
   </ItemGroup>
@@ -27,6 +28,7 @@
     <ClInclude Include="Client\Client.h" />
     <ClInclude Include="Client\DataClient.h" />
     <ClInclude Include="Client\WebClient.h" />
+    <ClInclude Include="Client\Web_Server_Protocol.pb.h" />
     <ClInclude Include="Config\CenterServerLogicConfig.h" />
     <ClInclude Include="SensorDB\SensorDBConn.h" />
     <ClInclude Include="SensorDB\SensorDBOperation.h" />
