--- a/code/Server/CenterServerLogic/CenterServerLogic.vcxproj.filters
+++ b/code/Server/CenterServerLogic/CenterServerLogic.vcxproj.filters
@@ -20,9 +20,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CenterServerLogic.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Config\CenterServerLogicConfig.cpp">
       <Filter>Config</Filter>
     </ClCompile>
@@ -43,6 +40,12 @@
     </ClCompile>
     <ClCompile Include="SensorDB\SensorDBConn.cpp">
       <Filter>SensorDB</Filter>
+    </ClCompile>
+    <ClCompile Include="CenterServerLogic.cpp">
+      <Filter>Client</Filter>
+    </ClCompile>
+    <ClCompile Include="Client\Web_Server_Protocol.pb.cc">
+      <Filter>Client</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -75,6 +78,9 @@
     </ClInclude>
     <ClInclude Include="SensorDB\SensorDBOperation.h">
       <Filter>SensorDB</Filter>
+    </ClInclude>
+    <ClInclude Include="Client\Web_Server_Protocol.pb.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
