--- a/code/common/DataBase/DataBase.vcxproj.filters
+++ b/code/common/DataBase/DataBase.vcxproj.filters
@@ -20,6 +20,9 @@
     <ClCompile Include="Mysql\MysqlResult.cpp">
       <Filter>Mysql</Filter>
     </ClCompile>
+    <ClCompile Include="Mysql\ProcedureSqlObject.cpp">
+      <Filter>Mysql</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Mysql\MysqlQuery.h">
@@ -32,6 +35,9 @@
       <Filter>Mysql</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Share\Header\Base\IMysqlQuery.h">
+      <Filter>Mysql</Filter>
+    </ClInclude>
+    <ClInclude Include="Mysql\ProcedureSqlObject.h">
       <Filter>Mysql</Filter>
     </ClInclude>
   </ItemGroup>
