添加windows下的mysql库 修改server.ini的配置； 添加服务器退出时，关闭对应的mysql模块； 修改MysqlQuery模块的代码；

--- a/bin/server/server.ini
+++ b/bin/server/server.ini
@@ -1,40 +1,74 @@
 [CenterServer]
+
 AppPort=10000
+
 AppCount=1000
+
 AppRecvBuffLen=1024
+
 AppSendBuffLen=131072
+
 AppMaxRecvPackLen=65000
+
 AppMaxSendPackLen=65000
+
 AppSleepTime=50
+
 AppTimeOut=10
 
+
 WebPort=10100
+
 WebCount=1000
+
 WebRecvBuffLen=1024
+
 WebSendBuffLen=131072
+
 WebMaxRecvPackLen=65000
+
 WebMaxSendPackLen=65000
+
 WebSleepTime=50
+
 WebTimeOut=10
 
+
 DataPort=10100
+
 DataCount=1000
+
 DataRecvBuffLen=1024
+
 DataSendBuffLen=131072
+
 DataMaxRecvPackLen=65000
+
 DataMaxSendPackLen=65000
+
 DataSleepTime=50
+
 DataTimeOut=10
 
+
+
 [SensorDB]
-IP=172.16.77.193
-Account=yefei
-Password=82334488
+
+IP=127.0.0.1
+Account=yefeiisme
+Password=letmego
 DBName=SensorDB
+
 CharacterSet=utf8
+
 PingTime=30
+
 SqlBufferLen=131072
+
 MaxSqlLen=1024
+
 ResultBufferLen=10485760
+
 MaxResultLen=1048576
+
 Frame=20
